--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,10 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+
+
+
+  "TokenOptions": {
+    "Audience": "kerem@kerem.com",
+    "Issuer": "kerem@kerem.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
   },
-  "AllowedHosts": "*"
-}
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
